--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port = 8000
+spring.datasource.url=jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.generate-ddl=true
 
+spring.mustache.expose-request-attributes=true
